Coded UC6-EditContacts to Console